added some first unit tests and license